--- a/client/src/components/CheckboxGroup/CheckboxGroup.module.scss
+++ b/client/src/components/CheckboxGroup/CheckboxGroup.module.scss
@@ -8,8 +8,12 @@
     display: flex;
     align-items: center;
     cursor: pointer;
-    font-size: 16px;
     user-select: none;
+}
+
+.title {
+    font-weight: 400;
+    font-size: 14px;
 }
 
 .checkbox-input {
@@ -17,9 +21,9 @@
 }
 
 .checkbox-custom {
-    width: 20px;
-    height: 20px;
-    border: 2px solid #aaa;
+    width: 24px;
+    height: 24px;
+    border: 1px solid #aaa;
     border-radius: 4px;
     display: flex;
     align-items: center;
