--- a/client/src/components/GlobalStyles/GlobalStyles.scss
+++ b/client/src/components/GlobalStyles/GlobalStyles.scss
@@ -14,6 +14,8 @@
     --muted-color: #999999;
     --information-color: #39b5fa;
     --success-color: #198754;
+
+    --content-width: 1152px;
 }
 
 * {
@@ -29,7 +31,7 @@ body {
 
 body {
     background-color: rgb(236, 236, 236);
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat';
 }
 
 // Scrollbar CSS
@@ -46,4 +48,18 @@ html *::-webkit-scrollbar-thumb {
 html *::-webkit-scrollbar-track {
     border-radius: 4px;
     background-color: rgba(0, 0, 0, 0);
+}
+
+a {
+    text-decoration: none;
+}
+
+button {
+    border: none;
+    outline: none;
+}
+
+ul {
+    list-style-type: none;
+    padding-left: 0;
 }
