--- a/client/src/components/MaterialsList/MaterialsList.module.scss
+++ b/client/src/components/MaterialsList/MaterialsList.module.scss
@@ -29,7 +29,7 @@
 .view-all-btn {
     display: flex;
     align-items: center;
-    background-color: #0000aa;
+    background-color: var(--primary);
     color: white;
     padding: 8px 16px;
     border-radius: 4px;
