--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -13,7 +13,7 @@
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 24px;
+    padding: 0 22px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -64,7 +64,7 @@
 }
 
 .action-item {
-    font-size: 16px;
+    font-size: 14px;
     color: var(--text-color);
     text-decoration: none;
     margin-left: 24px;
@@ -72,7 +72,11 @@
     font-weight: 500;
 
     &:hover {
-        color: #0000cc;
+        color: var(--primary);
+    }
+
+    &.active {
+        color: var(--primary);
     }
 }
 
@@ -112,6 +116,7 @@
     border-radius: 50%;
     overflow: hidden;
     margin-left: 24px;
+    margin-right: 8px;
     cursor: pointer;
 
     img {
