--- a/client/src/components/InputField/InputField.module.scss
+++ b/client/src/components/InputField/InputField.module.scss
@@ -7,7 +7,7 @@
 
 .input-label {
     font-size: 14px;
-    color: #555;
+    color: #000;
 }
 
 .required {
@@ -17,14 +17,14 @@
 
 .input-field {
     width: 100%;
-    padding: 8px;
+    padding: 12px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 8px;
     font-size: 14px;
     outline: none;
 
     &:focus {
-        border-color: #6a5acd;
+        border-color: var(--primary);
         box-shadow: 0 0 4px rgba(106, 90, 205, 0.5);
     }
 }
