--- a/client/src/layouts/components/Header/Header.module.scss
+++ b/client/src/layouts/components/Header/Header.module.scss
@@ -96,13 +96,13 @@
 
     &-count {
         position: absolute;
-        top: -14px;
-        right: -14px;
+        top: -12px;
+        right: -12px;
         background-color: red;
         color: white;
-        font-size: 12px;
-        width: 18px;
-        height: 18px;
+        font-size: 11px;
+        width: 16px;
+        height: 16px;
         border-radius: 50%;
         display: flex;
         align-items: center;
@@ -118,10 +118,20 @@
     margin-left: 24px;
     margin-right: 8px;
     cursor: pointer;
+    position: relative;
 
-    img {
+    .true {
         width: 100%;
         height: 100%;
         object-fit: cover;
+    }
+
+    .false {
+        width: 22px !important;
+        height: 22px !important;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 }
