Viết logic cho trang, Home, Login, Register, FilterDepartment, FilterSubject

--- a/client/src/components/FacultySection/FacultySection.module.scss
+++ b/client/src/components/FacultySection/FacultySection.module.scss
@@ -27,7 +27,6 @@
     color: #333;
     transition: transform 0.2s ease;
     background-color: white;
-    border: 1px solid transparent;
     padding-bottom: 10px;
     border-radius: 8px;
     width: 160px;
@@ -44,12 +43,15 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 8px;
+    border: 1px solid black;
+    overflow-y: hidden;
 
     img {
         width: 100%;
         object-fit: cover;
     }
 }
+
 .faculty-name {
     text-align: center;
     font-size: 14px;
@@ -61,4 +63,18 @@
     min-height: 40px; // Đảm bảo chiều cao cố định
     word-break: break-word; // Xuống dòng khi cần thiết
     white-space: normal; // Cho phép xuống dòng nếu quá dài
+}
+
+.carousel-list {
+    .slick-slide {
+        padding: 0 50px !important; // Tạo khoảng cách 10px ở cả hai bên
+    }
+}
+
+.carousel-item {
+    // padding: 6px 36px !important;
+    padding-top: 6px !important; // Tăng khoảng cách lên 30px
+}
+:global(.slick-slide) {
+    padding: 0 33px !important;
 }
