--- a/client/src/components/MaterialsList/MaterialsList.module.scss
+++ b/client/src/components/MaterialsList/MaterialsList.module.scss
@@ -1,5 +1,4 @@
 .wrapper {
-    margin-bottom: 24px;
 }
 
 .materials-grid {
@@ -23,7 +22,8 @@
 .view-all {
     display: flex;
     justify-content: center;
-    margin-top: 22px;
+    margin-top: 38px;
+    padding-bottom: 20px;
 }
 
 .view-all-btn {
