--- a/client/src/components/AccessSteps/AccessSteps.module.scss
+++ b/client/src/components/AccessSteps/AccessSteps.module.scss
@@ -15,7 +15,7 @@
     width: 200px;
     font-size: 18px;
     font-weight: 600;
-    color: var(--orange-color);
+    color: var(--orange-color) !important;
 }
 
 .subtitle {
@@ -26,7 +26,7 @@
 .steps-container {
     display: flex;
     justify-content: center;
-    gap: 40px;
+    gap: 60px;
     flex: 1;
 }
 
@@ -38,7 +38,7 @@
     padding: 4px 12px;
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    font-size: 12px;
+    font-size: 13px;
     font-weight: 400;
     min-width: 140px;
     cursor: pointer;
