--- a/client/src/components/Alert/Alert.module.scss
+++ b/client/src/components/Alert/Alert.module.scss
@@ -8,7 +8,7 @@
     font-weight: 500;
     line-height: 24px;
     width: 100%;
-    max-width: 300px;
+    max-width: 440px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transition: 0.3s ease-in-out;
 
@@ -25,6 +25,7 @@
 
     &-message {
         flex: 1;
+        margin-left: 4px;
     }
 
     &-close {
@@ -34,6 +35,7 @@
         color: inherit;
         display: flex;
         align-items: center;
+        margin-left: 10px;
     }
 }
 
