--- a/client/src/components/MaterialCard/MaterialCard.module.scss
+++ b/client/src/components/MaterialCard/MaterialCard.module.scss
@@ -1,12 +1,11 @@
 .wrapper {
-    margin-bottom: 16px;
 }
 
 .card {
     background-color: white;
     border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -31,7 +30,7 @@
 .label {
     position: absolute;
     top: 10px;
-    left: 1px;
+    left: 0;
     background-color: #ff6600;
     color: white;
     padding: 2px 4px;
@@ -68,6 +67,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    width: 240px;
 }
 
 .card-faculty {
@@ -86,6 +86,7 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    height: 28px;
 
     &:hover {
         color: #0000cc;
