--- a/client/src/layouts/components/Header/Header.module.scss
+++ b/client/src/layouts/components/Header/Header.module.scss
@@ -135,3 +135,70 @@
         transform: translate(-50%, -50%);
     }
 }
+
+// Style cho menu dropdown
+.menu-content {
+    background-color: #fff; // Đảm bảo màu nền trắng cho nội dung menu
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+    padding: 10px 0;
+    width: 240px;
+    border-radius: 8px;
+}
+
+.menu-header {
+    padding: 10px 15px;
+    font-weight: bold;
+    color: #212121;
+    font-weight: 400;
+
+    span {
+        font-weight: 500;
+        color: var(--primary);
+    }
+}
+
+.menu-item {
+    display: flex;
+    align-items: center;
+    color: #333;
+    cursor: pointer;
+
+    &:hover {
+        background-color: #f5f5f5;
+    }
+
+    a {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        color: #333;
+        text-decoration: none;
+        width: 100%;
+        padding: 10px 15px;
+
+        img {
+            width: 18px;
+            height: 18px;
+        }
+    }
+}
+
+// Ghi đè style của Tippy
+:global {
+    .tippy-box {
+        background-color: transparent !important;
+        border: none;
+        border-radius: 8px;
+        padding: 0 !important;
+    }
+
+    .tippy-content {
+        background-color: #fff !important;
+        padding: 0 !important;
+        border-radius: 8px !important;
+    }
+
+    .tippy-arrow {
+        display: none;
+    }
+}
