Xây dựng trang infomation

--- a/client/src/components/AccessSteps/AccessSteps.module.scss
+++ b/client/src/components/AccessSteps/AccessSteps.module.scss
@@ -15,7 +15,7 @@
     width: 200px;
     font-size: 18px;
     font-weight: 600;
-    color: var(--orange-color) !important;
+    color: var(--orange-color);
 }
 
 .subtitle {
