Xây dựng chức năng, tạo bài kiểm tra, trang trắc nghiệm

--- a/client/src/components/ConfirmTest/ConfirmTest.module.scss
+++ b/client/src/components/ConfirmTest/ConfirmTest.module.scss
@@ -11,10 +11,7 @@
     text-align: center;
 }
 
-.save-btn,
-.btn-next,
-.btn-submit,
-.btn-back {
+.btn-submit {
     background-color: var(--primary);
     padding: 10px 16px;
     margin-top: 12px;
@@ -41,17 +38,5 @@
 
     a:last-child {
         color: #b3b3b3;
-    }
-}
-
-.actions {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    div {
-        display: flex;
-        align-items: center;
-        gap: 10px;
     }
 }
