--- a/client/src/components/MaterialCard/MaterialCard.module.scss
+++ b/client/src/components/MaterialCard/MaterialCard.module.scss
@@ -65,15 +65,19 @@
 .card-info {
     padding: 16px;
     flex: 1;
-    display: flex;
-    flex-direction: column;
-    width: 240px;
+    width: 100%;
 }
 
 .card-faculty {
     font-size: 12px;
     color: #b3b3b3;
     margin-bottom: 8px;
+    text-decoration: none; // Bỏ gạch chân mặc định của Link
+    display: block; // Đảm bảo Link chiếm toàn bộ chiều rộng
+    white-space: nowrap; // Ngăn văn bản xuống dòng
+    overflow: hidden; // Ẩn phần văn bản vượt quá
+    text-overflow: ellipsis; // Thêm dấu "..." khi văn bản bị cắt
+    max-width: 100%; // Đảm bảo không vượt quá chiều rộng của container
 }
 
 .card-title {
@@ -83,10 +87,9 @@
     margin-bottom: 8px;
     text-decoration: none;
     display: -webkit-box;
-    -webkit-line-clamp: 2;
+    -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     overflow: hidden;
-    height: 28px;
 
     &:hover {
         color: #0000cc;
