--- a/client/src/components/Register/RegisterForm.module.scss
+++ b/client/src/components/Register/RegisterForm.module.scss
@@ -14,8 +14,9 @@
 
     a {
         color: var(--primary);
+
         &:hover {
-            color: #010171;
+            color: var(--orange-color);
         }
     }
 }
