--- a/client/src/components/TrendingNews/TrendingNews.module.scss
+++ b/client/src/components/TrendingNews/TrendingNews.module.scss
@@ -24,7 +24,7 @@
     background-color: white;
     border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     display: flex;
     flex-direction: column;
     padding-bottom: 8px;
