--- a/client/src/pages/CreateTest/CreateTest.module.scss
+++ b/client/src/pages/CreateTest/CreateTest.module.scss
@@ -37,6 +37,10 @@
         font-weight: 500;
         font-size: 14px;
         color: var(--primary);
+
+        &:hover {
+            color: var(--orange-color);
+        }
     }
 
     a:last-child {
