--- a/client/src/pages/FilterSubject/FilterSubject.module.scss
+++ b/client/src/pages/FilterSubject/FilterSubject.module.scss
@@ -17,6 +17,10 @@
         font-weight: 500;
         font-size: 14px;
         text-decoration: none;
+
+        &:hover {
+            color: var(--orange-color);
+        }
     }
     a:last-child {
         color: #b3b3b3;
