--- a/client/src/pages/MultipleChoice/MultipleChoice.module.scss
+++ b/client/src/pages/MultipleChoice/MultipleChoice.module.scss
@@ -67,6 +67,10 @@
         font-weight: 500;
         font-size: 14px;
         color: var(--primary);
+
+        &:hover {
+            color: var(--orange-color);
+        }
     }
 
     a:last-child {
