--- a/client/src/pages/UploadDocument/UploadDocument.module.scss
+++ b/client/src/pages/UploadDocument/UploadDocument.module.scss
@@ -306,12 +306,13 @@
 
 .button-group {
     display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 10px;
-    justify-content: flex-end;
 }
 
 .cancel-btn {
-    padding: 10px 20px;
+    padding: 10px 28px;
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 5px;
@@ -319,7 +320,7 @@
     cursor: pointer;
 
     &:hover {
-        background-color: #f5f5f5;
+        color: var(--orange-color);
     }
 }
 
@@ -331,10 +332,8 @@
     border-radius: 8px;
     cursor: pointer;
     font-family: 'Montserrat';
-    display: block;
-    margin: 0 auto;
 
     &:hover {
-        background: #020d80;
+        color: var(--orange-color);
     }
 }
